@@ -28,9 +28,6 @@ else
 AM_LDFLAGS = 
 endif
 
-libdir = $(prefix)/lib/dbmail
-pkglibdir = $(libdir)
-
 pkglib_LTLIBRARIES = libmysql.la \
 	libpgsql.la \
 	libsqlite.la \
